--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,21 @@
 #
 # Pods/
 
+# Xcode user stuff
+xcuserdata
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+
+_build*
